회원가입 틀+사진 스르륵

--- a/final_exam.html
+++ b/final_exam.html
@@ -595,7 +595,7 @@
                     <div id="menu">
                         <div id="sign">
                             <ul>
-                                <li>회원가입</li>
+                                <li><input type="button" value="회원가입" style="background-color: dimgrey; font-size: medium; color:black; border:0;"onclick=move_sign_in();></li>
                                 <li>로그인</li>
                             </ul>
                         </div>
@@ -709,5 +709,7 @@
         </div>
 
         <script type="text/javascript" src="PopUp.js"></script>
+        <script type="text/javascript" src="SignIn.js"></script>
+        <script type="text/javascript" src="ImgSlide.js"></script>
     </body>
 </html>
